# DevMachineCleaner

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
site/: index.html  robots.txt  sitemap.xml  styles.css
src/: App.css  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/_source/: generate.py
src-tauri/src/: cleaner.rs  commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/scanner/: ai_caches.rs  mod.rs  project_rules.toml  stacks.rs
src/components/: AiCachesPanel.tsx  CacheRow.tsx  CleanResultsBanner.test.tsx  CleanResultsBanner.tsx  CleanableRow.tsx  ConfirmCleanDialog.test.tsx  ConfirmCleanDialog.tsx  Dropdown.tsx  ProjectsPanel.test.tsx  ProjectsPanel.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx
src/lib/: format.test.ts  format.ts  ipc.ts  useCleanPanel.ts  useUpdater.test.ts  useUpdater.ts
