[package]
name = "dev-cleanup"
version = "0.1.0"
description = "Reclaim disk space by cleaning dev build artifacts and AI caches"
authors = ["Max Davydov"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/Maks417/dev-cleanup"
repository = "https://github.com/Maks417/dev-cleanup"

[lib]
name = "dev_cleanup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
rayon = "1"
trash = "5"
dirs = "5"
