[package]
name = "dev-cleanup"
version = "0.4.0"
description = "Reclaim disk space by cleaning dev build artifacts and AI caches"
authors = ["Max Davydov"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/Maks417/DevMachineCleaner"
repository = "https://github.com/Maks417/DevMachineCleaner"

[lib]
name = "dev_cleanup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
# Required in scope by `generate_context!` once the updater plugin config is
# present — the macro emits `serde_json` references for the signed-update setup.
serde_json = "1"
walkdir = "2"
rayon = "1"
trash = "5"
dirs = "6"
toml = "1.1"

[dev-dependencies]
tempfile = "3"
